--- a/deploy_tools/gunicorn-upstart.template.conf
+++ b/deploy_tools/gunicorn-upstart.template.conf
@@ -9,5 +9,5 @@ setuid junsu
 chdir /home/junsu/sites/SITENAME/source
 
 exec ../virtualenv/bin/gunicorn \
-    --bind unix:/tmp/superlists-staging.harveyk.me.socket \
+    --bind unix:/tmp/SITENAME.socket \
     superlists.wsgi:application
